Code Working with 1 build error, working on fixing
Error:
The build tools for v143 (Platform Toolset = 'v143') cannot be found. To build using the v143 build tools, please install v143 build tools.  Alternatively, you may upgrade to the current Visual Studio tools by selecting the Project menu or right-click the solution, and then selecting "Retarget solution".

--- a/Game_Engine - GADE7322/Game_Engine/Game_Engine.vcxproj
+++ b/Game_Engine - GADE7322/Game_Engine/Game_Engine.vcxproj
@@ -109,7 +109,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\includes\glfw-3.3.8.bin.WIN64;C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins\glfw-3.3.8.bin.WIN64\include;C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\includes\glfw-3.3.8.bin.WIN64;C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -135,12 +135,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Animation.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="shader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Animation.h" />
     <ClInclude Include="basicCubeMesh.h" />
     <ClInclude Include="basicMesh.h" />
     <ClInclude Include="camera.h" />
