error fixed, still showing weird shape
    / |
  /   |
/    ----
\        /
  \    /
    \/

--- a/Game_Engine - GADE7322/Game_Engine/Game_Engine.vcxproj
+++ b/Game_Engine - GADE7322/Game_Engine/Game_Engine.vcxproj
@@ -42,7 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -108,13 +108,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins\glfw-3.3.8.bin.WIN64\include;C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\includes\glfw-3.3.8.bin.WIN64;C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins\glfw-3.3.8.bin.WIN64\lib-vc2019;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
