--- a/Game_Engine - GADE7322/Game_Engine/Game_Engine.vcxproj
+++ b/Game_Engine - GADE7322/Game_Engine/Game_Engine.vcxproj
@@ -136,17 +136,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Animation.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ObjectContainer.cpp" />
     <ClCompile Include="shader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Animation.h" />
     <ClInclude Include="basicCubeMesh.h" />
     <ClInclude Include="basicMesh.h" />
     <ClInclude Include="camera.h" />
+    <ClInclude Include="ObjectContainer.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
