--- a/Game_Engine - GADE7322/Game_Engine/Game_Engine.vcxproj.filters
+++ b/Game_Engine - GADE7322/Game_Engine/Game_Engine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="ObjectContainer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AnimationController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shader.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ObjectContainer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AnimationController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
