--- a/Game_Engine - GADE7322/Game_Engine/Game_Engine.vcxproj
+++ b/Game_Engine - GADE7322/Game_Engine/Game_Engine.vcxproj
@@ -109,13 +109,15 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins\glfw-3.3.8.bin.WIN64\include;C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\includes\glfw-3.3.8.bin.WIN64;C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins\glfw-3.3.8.bin.WIN64\include;C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard_C>Default</LanguageStandard_C>
+      <UndefinePreprocessorDefinitions>NDEBUG;%(UndefinePreprocessorDefinitions)</UndefinePreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins\glfw-3.3.8.bin.WIN64\lib-vc2019;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glut32.lib;glfw3.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins\GL;C:\Users\User\Desktop\GADE7322_OpenGL\Game_Engine - GADE7322\Game_Engine\Cluedins\glfw-3.3.8.bin.WIN64\lib-vc2019;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -136,19 +138,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AnimationController.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="ObjectContainer.cpp" />
     <ClCompile Include="shader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AnimationController.h" />
     <ClInclude Include="basicCubeMesh.h" />
     <ClInclude Include="basicMesh.h" />
     <ClInclude Include="camera.h" />
-    <ClInclude Include="ObjectContainer.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
